criado o site e o arquivo index.html

--- a/public_html/paginas/pagina1.html
+++ b/public_html/paginas/pagina1.html
@@ -2,7 +2,7 @@
 <html= lang= "pt-br">
     <head>
 
-<title>O numero 1</title>
+<title>Pizzaria Dona Benta</title>
 	<meta charset="utf-8" />
 	
 		  
@@ -15,53 +15,35 @@
 	
 	<body background="../imagem/fundo5.png">
 	
-	<FONT SIZE="4" FACE="TAHOMA" COLOR="WHITE">
+	<FONT SIZE="4" FACE="TAHOMA" COLOR="Black">
 	
 	<div id="interface">
 	<hgroup>
 		<header id="cabecalho">
 		
-		<h1>Novak Djokovic</h1>
+		<h1>Pizzaria Dona Benta</h1>
 	</hgroup>
 	<img id="icone"
-src="../imagem/djokovic.png">
+src="../imagem/pizzariadonabenta.png">
 	<nav id="menu">
 <ul>
-	<li onmouseover= "mudaFoto('../imagem/home.png')"onmouseout="mudaFoto
-	('../imagem/djokovic.png')" >
+	<li onmouseover= "mudaFoto('../imagem/home1.png')"onmouseout="mudaFoto
+	('../imagem/pizzariadonabenta.png')" >
 <a href="../index.html">Home </a></li>
 
 	<li onmouseover= "mudaFoto
-	('../imagem/numero1.png') "onmouseout="mudaFoto
-	('../imagem/djokovic.png')">
-	<a href="pagina1.html"> O número 1 </a></li>
+	('../imagem/pedido.png') "onmouseout="mudaFoto
+	('../imagem/pizzariadonabenta.png')">
+	<a href="pagina1.html"> Pedido </a></li>
 	
-	<li onmouseover= "mudaFoto
-	('../imagem/titulos.png') "onmouseout="mudaFoto
-	('../imagem/djokovic.png')">
-	<a href="pagina2.html"> Títulos </a></li>
-
-<li onmouseover= "mudaFoto
-	('../imagem/treinamento.png') "onmouseout="mudaFoto
-	('../imagem/djokovic.png')">
-	<a href="pagina3.html"> Treino </a></li>
-	
-	<li onmouseover= "mudaFoto
-	('../imagem/multimidia.png') "onmouseout="mudaFoto
-	('../imagem/djokovic.png')">
-	<a href="pagina4.html"> Videos </a></li>
- 
-	<li onmouseover= "mudaFoto
-	('../imagem/agradecimentos.png') "onmouseout="mudaFoto
-	('../imagem/djokovic.png')">
-	<a href="pagina5.html"> Agradecimentos </a></li>
-  
   <li onmouseover= "mudaFoto
-	('../imagem/contato.png') "onmouseout="mudaFoto	('../imagem/djokovic.png')"> <a href="aulaformulario.html"> Formulário </a></li>
+	('../imagem/telefone.png') "onmouseout="mudaFoto	('../imagem/pizzariadonabenta.png')"> 
+	<a href="aulaformulario.html"> Formulário </a></li>
+	
 </ul>
 </nav>
-COPYright 2019 - by Guilherme Pereira
-Facebook I Twitter
+
+COPYright 2020 - by Guilherme Pereira
 
 </div>
 
