criado a parte do pedido e o arquivo pedido

--- a/public_html/paginas/pagina1.html
+++ b/public_html/paginas/pagina1.html
@@ -15,7 +15,7 @@
 	
 	<body background="../imagem/fundo5.png">
 	
-	<FONT SIZE="4" FACE="TAHOMA" COLOR="Black">
+	<FONT SIZE="4" FACE="TAHOMA" COLOR="White">
 	
 	<div id="interface">
 	<hgroup>
@@ -47,28 +47,118 @@ COPYright 2020 - by Guilherme Pereira
 
 </div>
 
-	<big><center><h1>Novak Dojkovic o número 1 do mundo.<h1><center><br></big>
-	<small><small><h2>A  primeira vez em que Novak Dojkovit foi o primeiro do mundo no Ranking Mundial foi no dia 4 de julho
-	de 2011, voltou a liderar entre novembro de 2012 até em setembro de 2013, logo após, reasumiu em 7 de julho de 2014
-	e permaneceu sendo o n°1 até 6 de novembro de 2016, hoje mantendo-se em primeiro do Ranking. Djoko é o quinto maior
-	tenista á ocupar a primeira posição do Ranking Mundial.<br><br>
-	Abaixo vemos Djoko segurando a taça de n°1 do mundo no tênis.<h2></small></small><br>
+	<big><center><h1>Pizzas Tradicionais.<h1><center><br></big>
 	
-	<center><img border="2" src="../imagem/a.jpg"
-width="700" height="450"/></a></center><br><br>
-
-    <h3>Em 2019 após ganhar o  Australian Open, ele se tornou o maior campeão desse torneio obtendo 7 conquistas. Além disso, 
-	ganhou em cima de Rafael Nadal por 3x0, se tornando o primeiro tenista a ganhar do espanhol por sets diretos numa final
-	de Grand Slam.<br><br>
-	Aqui vemos Djoko com Nadal após a vitória no Australian Open.<h3>
+			<div class="conteudo">
+		<div class="texto">
+	<p>Calabresa: Molho de tomate fresco, calabresa especial fatiada, rodelas de cebola, orégano e azeitonas pretas.<br>
+		  Adicional: Mussarela, tomate.</p><br>
+		</div>
+		
+		<div class="imagem">
+	<center><img border="2" src="../imagem/calabresa.png"
+width="320" height="170"/></a></center><br><br>
+		</div>
+		
+		</div>
+		
+		<div class="texto">
+		<p>Mussarela: Molho de tomate fresco, cobertura de mussarela especial, orégano e azeitonas pretas.<br>
+			Adicional: Calabresa, tomate.</p>
+			</div>
 	
-	<center><img border="2" src="../imagem/b.jpg"
-width="700" height="450"/></a></center><br><br>
-
-    <center><img border="2" src="../imagem/c.jpg"
-width="450" height="300"/></a></center><br><br>
-</nav>
-	 
+		<div class="imagem">
+	<center><img border="2" src="../imagem/mussarela.png"
+width="320" height="170"/></a></center><br><br> 
+		</div>
+		
+    <div class="texto">
+		<p>Frango com Catupiry: Molho de tomate fresco, peito de frango desfiado levemente temperado,
+		coberto com catupiry, orégano e azeitonas pretas<br>
+			Adicional: Cebola.</p>
+			</div>
+	
+		<div class="imagem">
+	<center><img border="2" src="../imagem/frango.png"
+width="320" height="170"/></a></center><br><br> 
+		</div>
+		
+		<div class="texto">
+		<p>Portuguesa: Molho de tomate fresco, presunto cozido, ovos picados, rodelas de cebola, cobertura de mussarela especial, orégano e azeitonas pretas.<br>
+			Adicional: Quaisquer ingredientes a mais na pizza.</p>
+			</div>
+	
+		<div class="imagem">
+	<center><img border="2" src="../imagem/portuguesa.png"
+width="320" height="170"/></a></center><br><br> 
+		</div>
+		
+		<div class="texto">
+		<p>4Queijos: Molho de tomate fresco, mussarela especial, camada de catupiry,
+		provolone, salpicado com gorgonzola, orégano e azeitonas pretas.<br>
+			Adicional: Quaisquer ingredientes a mais na pizza.</p>
+			</div>
+	
+		<div class="imagem">
+	<center><img border="2" src="../imagem/4queijos.png"
+width="320" height="170"/></a></center><br><br> 
+		</div>
+		
+		<div class="texto">
+		<p>Veneza: Molho de tomate fresco, presunto cozido picado, azeitona verde fatiada, 
+		cobertura de mussarela especial e orégano.<br>
+			Adicional: .</p>
+			</div>
+	
+		<div class="imagem">
+	<center><img border="2" src="../imagem/veneza.png"
+width="320" height="170"/></a></center><br><br> 
+		</div>
+		
+		<div class="texto">
+		<p>Moda da Casa: Molho de tomate fresco, mussarela especial, presunto cozido picado, ovos
+		, cebola fatiada, cobertura de catupiry, orégano e azeitonas pretas.<br>
+			Adicional: .</p>
+			</div>
+	
+		<div class="imagem">
+	<center><img border="2" src="../imagem/casa.png"
+width="320" height="170"/></a></center><br><br> 
+		</div>
+		
+		<div class="texto">
+		<p>Baiana: Molho de tomate fresco, calabresa moída levemente apimentada, ovos cozidos picados,
+		cebola fatiada, orégano e azeitonas pretas.<br>
+			Adicional: .</p>
+			</div>
+	
+		<div class="imagem">
+	<center><img border="2" src="../imagem/baiana2.png"
+width="320" height="170"/></a></center><br><br> 
+		</div>
+		
+		<div class="texto">
+		<p>Canadense: Molho de tomate fresco, lombo canadense fatiado, 
+		cobertura de catupiry, rodelas de cebola, orégano e azeitonas pretas.<br>
+			Adicional: .</p>
+			</div>
+	
+		<div class="imagem">
+	<center><img border="2" src="../imagem/canadense.png"
+width="320" height="170"/></a></center><br><br> 
+		</div>
+		
+		<div class="texto">
+		<p>Grega: Molho de tomate fresco, palmito macio em rodelas, ervilhas, cobertura de mussarela especial, 
+		orégano e azeitonas pretas.<br>
+			Adicional: .</p>
+			</div>
+	
+		<div class="imagem">
+	<center><img border="2" src="../imagem/grega.png"
+width="320" height="170"/></a></center><br><br> 
+		</div>
+		
 	 <h3>Telefone: (63) 98424-4706<br>
 	 email: glimamarinho0@gmail.com</h3>
 
