finalizado o site com a pagina contato

--- a/public_html/index.html
+++ b/public_html/index.html
@@ -47,7 +47,7 @@ src="imagem/pizzariadonabenta.png">
 <li onmouseover= "mudaFoto
 	('imagem/telefone.png') "onmouseout="mudaFoto
 	('imagem/pizzariadonabenta.png')">
-	<a href="paginas/aulaformulario.html"> Formulário </a></li>
+	<a href="paginas/aulaformulario.html"> Contato </a></li>
 </ul>
 </nav>
 COPYright 2020 - by Guilherme Pereira
