--- a/public_html/paginas/pagina1.html
+++ b/public_html/paginas/pagina1.html
@@ -38,7 +38,7 @@ src="../imagem/pizzariadonabenta.png">
 	
   <li onmouseover= "mudaFoto
 	('../imagem/telefone.png') "onmouseout="mudaFoto	('../imagem/pizzariadonabenta.png')"> 
-	<a href="aulaformulario.html"> Formulário </a></li>
+	<a href="aulaformulario.html"> Contato </a></li>
 	
 </ul>
 </nav>
